// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkCarouselIndicator should render correctly 1`] = `
<View
  childrenSortFn={[Function]}
  pointerEvents="box-none"
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(37, 32, 51, 0.3)",
        "borderRadius": 4,
        "flexDirection": "row",
        "height": 24,
        "justifyContent": "center",
        "paddingHorizontal": 12,
        "paddingVertical": 8,
        "width": 72,
      },
      null,
    ]
  }
>
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgb(230, 228, 235)",
        "borderRadius": 40,
        "height": 6,
        "marginHorizontal": 2,
        "width": 6,
      }
    }
  />
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgb(230, 228, 235)",
        "borderRadius": 40,
        "height": 6,
        "marginHorizontal": 2,
        "width": 6,
      }
    }
  />
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderRadius": 40,
        "height": 6,
        "marginHorizontal": 2,
        "width": 6,
      }
    }
  />
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgb(230, 228, 235)",
        "borderRadius": 40,
        "height": 6,
        "marginHorizontal": 2,
        "width": 6,
      }
    }
  />
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgb(230, 228, 235)",
        "borderRadius": 40,
        "height": 6,
        "marginHorizontal": 2,
        "width": 6,
      }
    }
  />
</View>
`;

exports[`iOS BpkCarouselIndicator should render correctly with a page count > 5 1`] = `
<View
  childrenSortFn={[Function]}
  pointerEvents="box-none"
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(37, 32, 51, 0.3)",
        "borderRadius": 4,
        "flexDirection": "row",
        "height": 24,
        "justifyContent": "center",
        "paddingHorizontal": 12,
        "paddingVertical": 8,
        "width": 72,
      },
      null,
    ]
  }
>
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgb(230, 228, 235)",
        "borderRadius": 40,
        "height": 2,
        "marginHorizontal": 2,
        "width": 2,
      }
    }
  />
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgb(230, 228, 235)",
        "borderRadius": 40,
        "height": 4,
        "marginHorizontal": 2,
        "width": 4,
      }
    }
  />
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderRadius": 40,
        "height": 6,
        "marginHorizontal": 2,
        "width": 6,
      }
    }
  />
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgb(230, 228, 235)",
        "borderRadius": 40,
        "height": 4,
        "marginHorizontal": 2,
        "width": 4,
      }
    }
  />
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgb(230, 228, 235)",
        "borderRadius": 40,
        "height": 2,
        "marginHorizontal": 2,
        "width": 2,
      }
    }
  />
</View>
`;

exports[`iOS BpkCarouselIndicator should render correctly with a page count equal to 11 and selected index equal to 9 1`] = `
<View
  childrenSortFn={[Function]}
  pointerEvents="box-none"
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(37, 32, 51, 0.3)",
        "borderRadius": 4,
        "flexDirection": "row",
        "height": 24,
        "justifyContent": "center",
        "paddingHorizontal": 12,
        "paddingVertical": 8,
        "width": 72,
      },
      null,
    ]
  }
>
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgb(230, 228, 235)",
        "borderRadius": 40,
        "height": 2,
        "marginHorizontal": 2,
        "width": 2,
      }
    }
  />
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgb(230, 228, 235)",
        "borderRadius": 40,
        "height": 2,
        "marginHorizontal": 2,
        "width": 2,
      }
    }
  />
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgb(230, 228, 235)",
        "borderRadius": 40,
        "height": 4,
        "marginHorizontal": 2,
        "width": 4,
      }
    }
  />
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderRadius": 40,
        "height": 6,
        "marginHorizontal": 2,
        "width": 6,
      }
    }
  />
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgb(230, 228, 235)",
        "borderRadius": 40,
        "height": 4,
        "marginHorizontal": 2,
        "width": 4,
      }
    }
  />
</View>
`;

exports[`iOS BpkCarouselIndicator should render correctly with arbitrary props 1`] = `
<View
  childrenSortFn={[Function]}
  pointerEvents="box-none"
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(37, 32, 51, 0.3)",
        "borderRadius": 4,
        "flexDirection": "row",
        "height": 24,
        "justifyContent": "center",
        "paddingHorizontal": 12,
        "paddingVertical": 8,
        "width": 72,
      },
      null,
    ]
  }
  testID="123"
>
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderRadius": 40,
        "height": 6,
        "marginHorizontal": 2,
        "width": 6,
      }
    }
  />
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgb(230, 228, 235)",
        "borderRadius": 40,
        "height": 6,
        "marginHorizontal": 2,
        "width": 6,
      }
    }
  />
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgb(230, 228, 235)",
        "borderRadius": 40,
        "height": 6,
        "marginHorizontal": 2,
        "width": 6,
      }
    }
  />
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgb(230, 228, 235)",
        "borderRadius": 40,
        "height": 6,
        "marginHorizontal": 2,
        "width": 6,
      }
    }
  />
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgb(230, 228, 235)",
        "borderRadius": 40,
        "height": 6,
        "marginHorizontal": 2,
        "width": 6,
      }
    }
  />
</View>
`;

exports[`iOS BpkCarouselIndicator should render correctly with custom styles 1`] = `
<View
  childrenSortFn={[Function]}
  pointerEvents="box-none"
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(37, 32, 51, 0.3)",
        "borderRadius": 4,
        "flexDirection": "row",
        "height": 24,
        "justifyContent": "center",
        "paddingHorizontal": 12,
        "paddingVertical": 8,
        "width": 72,
      },
      Object {
        "marginTop": 10,
      },
    ]
  }
>
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderRadius": 40,
        "height": 6,
        "marginHorizontal": 2,
        "width": 6,
      }
    }
  />
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgb(230, 228, 235)",
        "borderRadius": 40,
        "height": 6,
        "marginHorizontal": 2,
        "width": 6,
      }
    }
  />
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgb(230, 228, 235)",
        "borderRadius": 40,
        "height": 6,
        "marginHorizontal": 2,
        "width": 6,
      }
    }
  />
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgb(230, 228, 235)",
        "borderRadius": 40,
        "height": 6,
        "marginHorizontal": 2,
        "width": 6,
      }
    }
  />
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgb(230, 228, 235)",
        "borderRadius": 40,
        "height": 6,
        "marginHorizontal": 2,
        "width": 6,
      }
    }
  />
</View>
`;
